# taxflow-ai

./: .gitignore  SETUP_RUNBOOK.md  package.json  pnpm-lock.yaml  turbo.json  week1_infrastructure.md  week2_research_agent.md  weeks3_to_6_build.md
apps/backend/: .dockerignore  Dockerfile  pyproject.toml
apps/backend/docs/: model-routing.md
apps/backend/scripts/: backfill_engagements.py  backfill_firm_client_ids.py  backfill_query_sessions.py  rechunk_backfill.py  run_eval.py  seed_demo.py  seed_demo_staff.py
apps/backend/supabase/: config.toml
apps/backend/tests/: _migrations.py  conftest.py  test_admin_stats.py  test_agent_graph.py  test_annotations_api.py  test_answer_cache.py  test_auth.py  test_auth_middleware.py  test_auth_port.py  test_backfill_engagements.py  test_backfill_firm_client_ids.py  test_backfill_query_sessions.py  test_billing.py  test_clarify_gate.py  test_db.py  test_document_templates.py  test_documents_crud.py  test_documents_get.py  test_embedding_adapter.py  test_engagement_context.py  test_engagements_api.py  test_feedback_and_stream.py  test_feedback_rerun.py  test_firm_usage_count.py  test_follow_ups.py  test_health.py  test_integration_gates.py  test_json_utils.py  test_learning_loop.py  test_logging.py  test_migration_033_additive.py  test_migration_035_additive.py  test_migration_036_additive.py  test_migration_037_additive.py  test_migration_038_additive.py  test_migration_039_additive.py  test_migration_040_additive.py  test_migration_041_additive.py  test_parent_expansion.py  test_personalisation.py  (+28 more)
deploy/: Caddyfile  (+1 more)
(+305 files in other folders)
