[project]
name = "taxflow-backend"
version = "0.1.0"
description = "TaxFlow AI - FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "supabase>=2.9.0",
    "apscheduler>=3.10.4",
    "python-multipart>=0.0.12",
    "anthropic>=0.39.0",
    "openai>=1.54.0",
    "httpx>=0.27.0",
    "python-docx>=1.1.2",
    "weasyprint>=63.0",
    "psycopg2-binary>=2.9.9",
    "pdfplumber>=0.11.4",
    "tiktoken>=0.8.0",
    "beautifulsoup4>=4.12.3",
    "stripe>=11.1.0",
    "markdown>=3.7",
    "email-validator>=2.2.0",
    "boto3>=1.35.0",
    "playwright>=1.48.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["accuracy: expensive LLM accuracy suite, excluded from CI"]
addopts = "-m 'not accuracy'"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/taxflow"]
